--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -21,7 +21,7 @@
                     <div class="section-header"><h3>Training Spec</h3></div>
                     <label for="N">Num Devices:</label>
                     <input type="number" id="N" name="N" value="8" min="1" required>
-                    <label for="max_device_memory_gb">Max Per-Device Memory (GB):</label>
+                    <label for="max_device_memory_gb">Device Memory (GB):</label>
                     <input type="number" id="max_device_memory_gb" name="max_device_memory_gb" value="80" step="0.1" min="1" required>
                     <label for="seqlen">Sequence Length (K):</label>
                     <input type="number" id="seqlen" name="seqlen" value="32" min="1" required>
@@ -57,13 +57,13 @@
                 <div id="param-grid">
                     <hr class="section-separator">
                     <div class="section-header"><h3>Hardware Specs</h3><h4>Discovered by System In Practice</h4></div>
-                    <label for="hardware_max_tflops">Hardware Max (BF16 TFLOPS):</label>
+                    <label for="hardware_max_tflops">BF16 TFLOPS:</label>
                     <input type="number" id="hardware_max_tflops" name="hardware_max_tflops" value="989" step="0.1" min="0.1" required>
-                    <label for="hardware_mem_bw_gbs">Hardware Mem BW (GB/s):</label>
+                    <label for="hardware_mem_bw_gbs">Dev Mem BW (GB/s):</label>
                     <input type="number" id="hardware_mem_bw_gbs" name="hardware_mem_bw_gbs" value="3350" step="1" min="1" required>
-                    <label for="matmul_efficiency">Matmul Efficiency:</label>
+                    <label for="matmul_efficiency">Matmul Eff:</label>
                     <input type="number" id="matmul_efficiency" name="matmul_efficiency" value="0.7" step="0.01" min="0" max="1" required>
-                    <label for="attn_efficiency">Attention Efficiency:</label>
+                    <label for="attn_efficiency">Attn Eff:</label>
                     <input type="number" id="attn_efficiency" name="attn_efficiency" value="0.55" step="0.01" min="0" max="1" required>
                     <label for="home_bw_gbit_sec">Home BW (Gbps):</label>
                     <input type="number" id="home_bw_gbit_sec" name="home_bw_gbit_sec" value="400" min="1" required>
