--- a/libdataflowring/sim_app/static/style.css
+++ b/libdataflowring/sim_app/static/style.css
@@ -36,7 +36,7 @@ header h1 {
     display: grid;
     grid-template-columns: 220px 1fr; /* Fixed Sidebar, Flexible Content */
     flex-grow: 1;
-    overflow: hidden; /* Keep hidden */
+    overflow: auto; /* Keep hidden */
     height: calc(100vh - 57px); /* Adjust 57px if header height changes */
 }
 
@@ -83,7 +83,7 @@ header h1 {
 .content-area-wrapper {
     display: flex;
     align-items: flex-start;
-    overflow: hidden;
+    overflow: auto;
     padding: 20px;
     gap: 20px;
     max-height: 100%;
