More legend prettifying

--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -80,7 +80,7 @@
 
         <div class="content-area-wrapper">
             <div id="memory-legend-area" class="legend-area" >
-                <h2>Memory Info</h2>
+                <h2>Memory</h2>
                 <pre></pre>
             </div>
 
@@ -114,7 +114,7 @@
             </main>
 
             <div id="compute-legend-area" class="legend-area" >
-                 <h2>Compute & Communication Info</h2>
+                 <h2>Compute<br>&<br>Communication</h2>
                  <pre></pre>
             </div>
         </div>
