--- a/libdataflowring/sim_app/static/style.css
+++ b/libdataflowring/sim_app/static/style.css
@@ -156,11 +156,11 @@ header h1 {
     background-color: #fdfdfd;
     z-index: 1;
     flex-shrink: 0;
-    white-space: nowrap;
+    text-align: center;
 }
 .legend-area pre {
     margin: 0;
-    padding-top: 5px;
+    padding-top: 10px;
     font-family: monospace; /* Set font-family here */
     font-size: 0.75rem; /* Restore specific font size for pre (was inherited) */
     color: #555;
