--- a/libdataflowring/sim_app/static/style.css
+++ b/libdataflowring/sim_app/static/style.css
@@ -114,7 +114,7 @@ header h1 {
 .content-area-wrapper {
     flex: 1; /* Takes remaining space */
     display: flex;
-    align-items: stretch;
+    align-items: flex-stretch;
     overflow: hidden;
     padding: 20px;
     gap: 20px;
