--- a/libdataflowring/sim_app/static/style.css
+++ b/libdataflowring/sim_app/static/style.css
@@ -162,6 +162,7 @@ header h1 {
 .legend-area pre {
     margin: 0;
     padding-top: 15px;
+    padding-bottom: 10px;
     font-family: monospace; /* Set font-family here */
     font-size: 0.75rem; /* Restore specific font size for pre (was inherited) */
     color: #555;
