Updating top title to emphasize importance of casual attention

--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Transformer Dataflow Simulator</h1>
+        <h1>Dataflow Simulator for Causal Transformers</h1>
     </header>
 
     <div class="main-container">
