Removing background on dataflow aniation window

--- a/libdataflowring/sim_app/static/style.css
+++ b/libdataflowring/sim_app/static/style.css
@@ -217,7 +217,7 @@ header h1 {
     min-height: 0;
     width: 100%;
     border: 1px solid #ccc;
-    background-color: #dedede;
+    background-color: #f7f7f7;
     position: relative;
     overflow: hidden;
     border-radius: 4px;
